...
            
            Section("Recurring items") {
                ForEach(items) { item in
                    itemRow(item)
                }
                
                Button("Create a new item") {
                    showEditItem = true
                }
            }
        }
        .sheet(isPresented: $showEditItem) {
            EditItemView(item: itemToEdit)
...
